--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "financialsystem_backend",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start:dev": "node src/index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
